--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,12 @@
-apply plugin: 'java'
-apply plugin: 'com.github.johnrengelman.shadow'
-apply plugin: 'me.champeau.gradle.jmh'
-
-buildscript {
-    repositories {
-        mavenLocal()
-        jcenter()
-    }
-
-    dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.0'
-        classpath "me.champeau.gradle:jmh-gradle-plugin:1.3.3"
-    }
-
+plugins {
+   id 'com.github.johnrengelman.shadow' version '1.2.0'
+   id 'java'
+   id 'me.champeau.gradle.jmh' version '0.2.0'
 }
+
+apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'java'
+apply plugin: 'me.champeau.gradle.jmh'
 
 version = '0.1-SNAPSHOT'
 
